crates/bsql/tests/compile_fail/multiple_statements.stderr
error: multiple statements not allowed — use separate query! calls. Semicolons are not permitted in bsql queries.
 --> tests/compile_fail/multiple_statements.rs:2:13
  |
2 |     let _ = bsql::query!("SELECT 1; SELECT 2");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
